lox-tests/tests/class/inherit_self.stderr
ERROR: A class cannot inherit from itself
 --> 1:7
  |
1 | class Foo < Foo {} // Error at 'Foo': A class can't inherit from itself.
  |       ^-------^
